--- a/abc.html
+++ b/abc.html
@@ -1,1 +1,9 @@
-helo 
+<!DOCTYPE html>
+<html>
+    <head>
+        <!-- head definitions go here -->
+    </head>
+    <body>
+        <!-- the content goes here -->
+    </body>
+</html>
